add openai recommendation functionality

--- a/.gitignore
+++ b/.gitignore
@@ -322,10 +322,12 @@ pyrightconfig.json
 
 *.xlsx
 *.xls
-untitled_folder/
 *.pyc
+untitled_folder/
+cltv_project/*.pyc
 cltv_project/db.sqlite3
 cltv_project/__pycache__/
 llama3_response.txt
+openai_response.txt
 
 
